# Moxy

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: .gitignore  main.py  pyproject.toml
backend/src/: __init__.py  addon.py  browser_manager.py  db.py  http_sender.py  proxy_manager.py  state.py
backend/src/api/: __init__.py  agent.py  projects.py  proxy.py  requests.py  resender.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AppTabs.tsx  HttpViewer.tsx  MethodBadge.tsx  PukeLogo.tsx  RequestFilters.tsx  RequestList.tsx  StatusCode.tsx  StatusIndicators.tsx
frontend/src/components/tabs/: AgentTab.tsx  HomeTab.tsx  ProjectTab.tsx  ProxyTab.tsx  ResenderTab.tsx
frontend/src/contexts/: ResenderContext.tsx
frontend/src/data/: demoData.ts
frontend/src/lib/: api.ts  requestTransform.ts
frontend/src/pages/: Index.tsx
